# rust-ffs

./: .gitignore  Cargo.toml
etc/: setupdisk.sh
fuzz/: Cargo.toml
fuzz/fuzz_targets/: alloc.rs  fileops.rs  fuzz_target_1.rs
src/: consts.rs  direct.rs  lib.rs  main.rs  tables.rs
