[package]
name = "ffs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
argh = "0.1.10"
derive_more = "0.99.17"
env_logger = "0.11"
fuse = "0.3.1"
fuser = "0.14.0"
libc = "0.2.143"
log = "0.4.17"
memmap2 = "0.9"
memoffset = "0.9"

[profile.release]
debug = true
